# FoodNER

./: LICENSE.md  README.md  build.sh  cli.py  poor.mans.logger.sh  pyproject.toml
cli/: __init__.py  setup.py
cli/dataset/: __init__.py  dataset_commands.py
cli/evaluation/: __init__.py  eval_commands.py
cli/prediction/: __init__.py  prediction_commands.py
cli/training/: __init__.py  train_commands.py
config/: nlp_models.py  project.py  spacy_base.cfg  spacy_config_eval.cfg  spacy_config_ner+tok2vec_eval.cfg  spacy_config_ner+tok2vec_train.cfg  spacy_config_train.cfg  spacy_config_transformer_eval.cfg  spacy_config_transformer_train.cfg
data/inference/: raw_texts.jsonl  raw_texts_template.jsonl
data/spacy_datasets/: all_data.spacy  dev.spacy  dev_jsonl.spacy  test.spacy  train.spacy  train_jsonl.spacy
docs/: CLI.md  Execution.md  Installation.md  REPORT.md  Requirements.md
notebooks/: bert_evaluation.ipynb  ner_evaluation.ipynb  pytorch_preproc.ipynb  pytorch_train.ipynb  spacy_train_from_jsonl.ipynb
src/NER/: pytorch_dataloader.py  utils.py
src/NER/spacy/: predict.py  (+1 more)
src/NLP/: nlp_base.py
src/controllers/: __init__.py  data_preparation.py  evaluation.py  model_training.py  prediction.py
src/schemas/: dataclasses.py  datatypes.py
src/tools/: general_tools.py  text_tools.py
tests/NER/: test_pytorch_dataloader.py  test_utils.py
tests/NLP/: test_nlp_base.py
tests/controllers/: test_data_preparation.py  test_evaluation.py  test_model_training.py  test_prediction.py
tests/tools/: test_general_tools.py  test_math_tools.py  test_text_tools.py
(+30 files in other folders)
