[tool.poetry]
name = 'src'
version = '0.0.1'  # Major.Minor.Patch
description = 'A service responsible to detect and extract Name Entities from Food Science text-files.'
authors = ['Pechlivanis Konstantinos <kpechlivanis21@gmail.com>']
readme = 'README.md'
license = 'Proprietary - Under License of Agroknow IKE Company'
repository = 'git@bitbucket.org:agroknowdev/foodner.git'
keywords = ['Agroknow', 'Food', 'Safety', 'Waste', 'NER', 'NLP',
            'Entities', 'Recognition']
classifiers = [
    'Development Status :: 1 - Development/Unstable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Version Control :: Git'
]

[tool.poetry.dependencies]
python = '>=3.8,<3.10'

click = '^8.1.3'
datasets = '~2.11.0'
loguru = '^0.7.0'
nervaluate = '^0.1.8'
nltk = '~3.8.1'
pytest = '^7.3.1'
python-dotenv = '^1.0.0'
requests = '~2.29.0'
responses = '<0.19'
spacy = '~3.5.2'
spacy-transformers = '~1.2.3'
transformers = '~4.26.1'
torch = '~1.13.1'
tqdm = '^4.65.0'

[tool.poetry.dev-dependencies]
coverage = '^7.2.5'
coverage-badge = '^1.1.0'
pytest-cov = '^4.0.0'

[tool.pytest.ini_options]
filterwarnings = []  # https://docs.pytest.org/en/stable/warnings.html

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
